2002-06-22  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc : Fixed a problem when reusing a variable name. Using the
	  other variable with the same name and an initializer of the new one
	  is a bad idea.

2002-06-22  Ryan Nunn  <triforce@merlin.net.au>
	* gamemap.cc : Fixing the 12*12-1 bug
	* gumps/Paperdoll_gump*.* : Fixing up various paperdoll related problems
	* Makefile.win32 : Removed Exult studio support from Win32 builds.
	  Haven't tested compiling (it could be broken) :-)
	* windrag.* : Is now windows only, and is only compiled if actually
	  compiling with Exult studio support.

2002-06-19  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucxt/src/ucfunc.cc: fixed compile error if HAVE_SSTREAM defined
	* data/bg/*, gumps/Paperdoll_gump_info.cc: new art by Oblivious

2002-06-19  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Better body placement.
	* schedule.cc: Desk:  Fixed bug with people not sleeping in beds
	or sitting by desks.

2002-06-18  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: When shooting, take don't be blocked by opponent's
	footprint.
	* combat.cc: The enemy of my friend is my enemy.

2002-06-13  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc, audio/xmidi.cc : Getting around some problems with (our)
	  snprintf not supporting floating point types. 

2002-06-09  Ryan Nunn  <triforce@merlin.net.au>
	* gumps/Paperdoll_gump.cc : Fixing up cosmetic problem with belt slot
	  items lacking paperdoll art.

2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* autogen.sh: always include /usr/local/share/aclocal if it exists

2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/Makefile.am: add estudio/new files to dist/data
	* exult.spec.in: add estudio/new files to studio rpm

2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* */Makefile.am: cleaning up distro stuff
	* exult.spec.in: fixed
	* usecode/ucxt/head2data.cc: removed utils.cc dependency
